<resources>
    <string name="app_name">Mappe1</string>
    <string name="omspillettekst">Hei på deg! \nDyreriket trenger din hjelp til å løse
        addisjonsregnetykker! \n\nHver av disse dyrene har et eget regnestykke og hvis du klarer
        disse så kan du samle på opp til 15 dyr! Antall regnestykker kan du justeres under preferanser.</string>
    <string name="riktig1">Riktig! Her er neste oppgave</string>
    <string name="riktig2">Riktig! du er på siste spørsmål! Du har nesten klart det!</string>
    <string name="feil1">Nesten! prøv igjen! Du kan klare det! </string>
    <string name="avslutt_spill">Avslutt spill</string>
    <string name="avslutt">Avslutt</string>
    <string name="ok">Ok</string>
    <string name="tittel">Addisjonsspill</string>
    <string name="startspill">Start spill</string>
    <string name="omspillet">Om Spillet</string>
    <string name="preferanser">Preferanser</string>
    <string name="tilbakestart">Tilbake</string>
    <string name="gratulerer">Gratulerer!</string>
    <string name="oppgavetittel">Oppgave %1$d</string>
    <string name="alledyrsamlet">Dyrene du har samlet:</string>
    <string name="clear">Tøm</string>
    <string name="antallspill">Antall spill:</string>
    <string name="velgspraak">Velg språk:</string>
    <string name="spraaknorsk">Norsk</string>
    <string name="spraaktysk">Tysk</string>
    <string name="nyttspill">Nytt Spill</string>
    <string name="tilbakeforside">Tilbake til forsiden</string>
    <string name="dialogtittel">Vil du avslutte spillet?</string>
    <string name="dialogja">Ja</string>
    <string name="dialognei">Nei</string>


</resources>