<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main"
    android:background="@drawable/bakgrunn4">


    <ImageView
        android:id="@+id/catFp"
        android:layout_width="142dp"
        android:layout_height="128dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="532dp"
        android:src="@drawable/tiger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tilbakeStart"
        style="@style/sjekkSvar"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tilbakestart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="74dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="160dp"
        android:text="@string/omspillet"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="330dp"
        android:layout_height="253dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="280dp"
        android:text="@string/omspillettekst"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>